finish responsive for tablet

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -305,7 +305,8 @@ a {
 }
 
 .features .list {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     margin-top: 70px;
     gap: 30px;
 }
@@ -571,7 +572,7 @@ a {
 }
 
 .footer .row-top {
-    gap: 185px;
+    column-gap: 185px;
 }
 
 .footer .heading {
