--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -162,6 +162,10 @@
 
 /* ========== MOBILE ========== */
 @media screen and (max-width: 767px) {
+    .hide-on-mobile {
+        display: none;
+    }
+
     .menu-drawer {
         padding: 40px;
         inset: 0 25% 0 0;
@@ -169,5 +173,111 @@
 
     .actions {
         display: none;
+    }
+
+    .hero {
+        height: calc(100vh - 80px);
+    }
+
+    .hero .title {
+        margin-top: 16px;
+        font-size: 5.2rem;
+    }
+
+    .hero .desc {
+        width: 100%;
+    }
+
+    .clients .image {
+        row-gap: 20px;
+    }
+
+    .list-guide {
+        flex-direction: column;
+        row-gap: 60px;
+    }
+
+    .guide-cta {
+        margin-top: 60px;
+    }
+
+    .features .link {
+        display: none;
+    }
+
+    .features .list {
+        grid-template-columns: 1fr;
+    }
+
+    .view-all {
+        display: flex;
+        justify-content: center;
+        margin-top: 60px;
+    }
+
+    .stats .sub-title {
+        width: 100%;
+    }
+
+    .stats .img-block .image {
+        width: 100%;
+    }
+
+    .stats .img-block .stats-trend {
+        top: -50px;
+        left: 20px;
+    }
+
+    .stats .row-qty {
+        flex-direction: column;
+        align-items: center;
+        row-gap: 60px;
+    }
+
+    .stats .row-qty .qty-desc {
+        text-align: center;
+    }
+
+    .subcription .body {
+        height: auto;
+    }
+
+    .subcription .info {
+        padding: 32px;
+    }
+
+    .footer .row-top {
+        grid-template-columns: 1fr;
+        row-gap: 32px;
+    }
+
+    .footer .row-top .list,
+    .footer .desc {
+        margin-top: 24px;
+    }
+
+    .footer .row-bottom {
+        flex-direction: column;
+        align-items: flex-start;
+        row-gap: 24px;
+    }
+}
+
+/* ========== Super Small ========== */
+@media screen and (max-width: 575px) {
+    .content {
+        max-width: calc(100% - 40px);
+    }
+
+    .hero .title {
+        font-size: 4.2rem;
+    }
+
+    .hero .desc {
+        font-size: 1.4rem;
+    }
+
+    .features .sub-title {
+        font-size: 3.2rem;
     }
 }
